[tool.poetry]
name = "repl_nix_pingr"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
orjson = "^3.8.0"
requests = "^2.28.1"
typing-extensions = "^4.3.0"
yarl = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
